--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
     <title>ManageMeV2</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      <label class="switch">
+        <input type="checkbox" id="theme-toggle" />
+        <span class="slider round"></span>
+      </label>
+    </div>
     <script type="module" src="/src/views/main.ts"></script>
+    <script src="/src/helpers/themeHelper.ts"></script>
   </body>
 </html>
